k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-app-week2
  namespace: aluno-afonso
  labels:
    aluno: afonso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-week
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app-week
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - image: afonsorf/app-jack-week:v1
        imagePullPolicy: Always
        name: app-week2
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /um
            port: http
          failureThreshold: 3
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /um
            port: http
          failureThreshold: 10
          periodSeconds: 10
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
