k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-week2
  namespace: aluno-afonso
  labels:
    aluno: afonso
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: app
  type: ClusterIP
