k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-app-week2
  namespace: aluno-afonso
spec:
  rules:
  - host: app-afonso.aula.jac.bsb.br
    http:
      paths:
      - backend:
          service:
            name: service-app-week2
            port: 80
        path: /
        pathType: Prefix
